# modelo-720

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: assets.rs  lib.rs  main.rs  modelo.rs  modelo_720.rs  parsers.rs
