[package]
name = "modelo-720-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
fixed_width = "0.6.0"
fixed_width_derive = "0.6.0"
once_cell = "1.20.2"
regex = "1.11.1"
rust_decimal = "=1.36.0"
serde = { version = "1.0.213", features = ["derive"] }
